<resources>
    <string name="app_name">Деловые заметки</string>
    <string name="search_hint">Поиск по заметкам</string>
    <string name="empty_notes">Заметок пока нет</string>
    <string name="new_note">Новая заметка</string>
    <string name="edit_note">Редактирование заметки</string>
    <string name="title_hint">Заголовок</string>
    <string name="content_hint">Содержание встречи или задачи</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="storage_title">Способ хранения</string>
    <string name="storage_sqlite">SQLite</string>
    <string name="storage_file">Файл JSON</string>
    <string name="save">Сохранить</string>
    <string name="edit">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="add_note">Добавить заметку</string>
</resources>
